[gd_scene load_steps=8 format=3 uid="uid://82p7egds33qc"]

[ext_resource type="Texture2D" uid="uid://dg2apg5n8u421" path="res://assets/UI/glass_background.png" id="1_nmc0v"]
[ext_resource type="Script" path="res://scripts/vivarium_manager.gd" id="1_tdv4x"]
[ext_resource type="PackedScene" uid="uid://cp4vq361goyd6" path="res://scenes/viv_ui1.tscn" id="2_lbfw6"]
[ext_resource type="PackedScene" uid="uid://wanimk6c0nxm" path="res://scenes/viv_ui2.tscn" id="3_7vu4x"]
[ext_resource type="Script" path="res://scripts/animal_manager.gd" id="3_w80h7"]
[ext_resource type="Script" path="res://scripts/camera_manager.gd" id="5_2uhok"]
[ext_resource type="Script" path="res://scripts/debug_manager.gd" id="7_l8nql"]

[node name="Vivarium" type="Node2D"]
script = ExtResource("1_tdv4x")

[node name="GlassBackground" type="Sprite2D" parent="."]
position = Vector2(1920, 1080)
texture = ExtResource("1_nmc0v")

[node name="Animals" type="Node2D" parent="."]
script = ExtResource("3_w80h7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1920, 1080)
script = ExtResource("5_2uhok")

[node name="VivUI1" parent="." instance=ExtResource("2_lbfw6")]

[node name="VivUI2" parent="." instance=ExtResource("3_7vu4x")]

[node name="DebugManager" type="Node" parent="."]
script = ExtResource("7_l8nql")
